--- a/.github/workflows/uat.yml
+++ b/.github/workflows/uat.yml
@@ -27,7 +27,7 @@ jobs:
       - uses: actions/checkout@v3
 
       # Runs a single command using the runners shell
-      - name: Run dbt
+      - name: DBT build
         uses: molar-volume/dbt-snowflake@main
         with:
           command: |
