--- a/.github/workflows/uat.yml
+++ b/.github/workflows/uat.yml
@@ -26,8 +26,7 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
 
-      # Runs a single command using the runners shell
-      - name: DBT build
+      - name: DBT execution
         uses: molar-volume/dbt-snowflake@main
         with:
           command: |
