--- a/.github/workflows/uat.yml
+++ b/.github/workflows/uat.yml
@@ -27,7 +27,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: DBT execution
-        uses: molar-volume/dbt-snowflake@main
+        uses: mwhitaker/dbt-action@master
         with:
           command: |
             dbt deps
