--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -1,24 +1,21 @@
-# This is a basic workflow to help you get started with Actions
-
-name: CI/CD pipeline that runs on PR to main branch. Executed on UAT environment in Snowflake.
-
-# Controls when the workflow will run
+name: Production DBT pipeline. Runs on schedule and when PR was merged to `main`.
 on:
-  pull_request:
+  push:
     branches: [ "main" ]
     paths:
       - 'dbt/**'
-      - '.github/workflows/uat.yml'
+      - '.github/workflows/prod.yml'
+  schedule:
+    # * is a special character in YAML so you have to quote this string
+    - cron: '30 5 * * 1,3'
+    - cron: '30 5 * * 2,4'
 
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
 jobs:
   DBT:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
@@ -39,5 +36,5 @@ jobs:
           role: sysadmin
           warehouse: wh_sfp
           database: mt_py
-          schema: uat
-          target: UAT
+          schema: prod
+          target: PROD
