--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -21,7 +21,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: DBT execution
-        uses: molar-volume/dbt@snowflake-1.4.1
+        uses: molar-volume/dbt@snowflake
         with:
           command: |
             dbt deps
