--- a/pbt_project.yml
+++ b/pbt_project.yml
@@ -25,7 +25,6 @@ sqlModels:
     author: maciej@prophecy.io
     files:
     - models/staging/stg_orders.sql
-    - .prophecy/ide/models/stg_orders.json
     - models/staging/schema.yml
     sqlDependencies:
       models: []
@@ -39,13 +38,23 @@ sqlModels:
     author: maciej@prophecy.io
     files:
     - models/orders.sql
-    - .prophecy/ide/models/orders.json
     - models/schema.yml
     sqlDependencies:
       models: []
       datasets: []
     createdAt: '2023-04-12 15:35:01'
     modifiedAt: '2023-04-12 15:35:01'
+  .prophecy/metadata/sqlmodels/customers_orders:
+    name: customers_orders
+    description: null
+    author: maciej@prophecy.io
+    files:
+    - models/customers_orders.sql
+    sqlDependencies:
+      models: []
+      datasets: []
+    createdAt: '2023-04-12 15:42:04'
+    modifiedAt: '2023-04-12 15:42:04'
   .prophecy/metadata/sqlmodels/customers:
     name: customers
     description: This table has basic information about a customer, as well as some
@@ -53,7 +62,6 @@ sqlModels:
     author: maciej@prophecy.io
     files:
     - models/customers.sql
-    - .prophecy/ide/models/customers.json
     - models/schema.yml
     sqlDependencies:
       models: []
@@ -66,7 +74,6 @@ sqlModels:
     author: maciej@prophecy.io
     files:
     - models/staging/stg_payments.sql
-    - .prophecy/ide/models/stg_payments.json
     - models/staging/schema.yml
     sqlDependencies:
       models: []
@@ -79,7 +86,6 @@ sqlModels:
     author: maciej@prophecy.io
     files:
     - models/staging/stg_customers.sql
-    - .prophecy/ide/models/stg_customers.json
     - models/staging/schema.yml
     sqlDependencies:
       models: []
@@ -112,7 +118,26 @@ sqlSeeds:
     - seeds/raw_payments.csv
     createdAt: '2023-04-12 15:35:01'
     modifiedAt: '2023-04-12 15:35:01'
-sqlSources: {}
+sqlSources:
+  .prophecy/metadata/sqlsources/main_default:
+    name: main.default
+    description: null
+    author: maciej@prophecy.io
+    files:
+    - prophecy-sources/sources.yml
+    createdAt: '2023-04-12 15:42:11'
+    modifiedAt: '2023-04-12 15:42:11'
+    tables:
+    - name: raw_customers
+      description: null
+      author: maciej@prophecy.io
+      createdAt: '2023-04-12 15:42:11'
+      modifiedAt: '2023-04-12 15:42:11'
+    - name: raw_orders
+      description: null
+      author: maciej@prophecy.io
+      createdAt: '2023-04-12 15:42:16'
+      modifiedAt: '2023-04-12 15:42:16'
 sqlUnreferencedSources: {}
 sqlPipeline:
   name: sqlPipeline
