--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -22,5 +22,8 @@ require-dbt-version: [">=1.0.0", "<2.0.0"]
 models:
   jaffle_shop:
       materialized: table
-      staging:
+      staging:      
         materialized: view
+        +tags: piperider
+      marts:
+        +tags: piperider
