--- a/models/marts/orders.yml
+++ b/models/marts/orders.yml
@@ -1,7 +1,7 @@
 version: 2
 
 models:
-  - name: orders
+  - name: orders2
     description: This table has basic information about orders, as well as some derived facts based on payments
 
     columns:
