upload to cloud
Signed-off-by: popcorny <celu@infuseai.io>

--- a/.github/workflows/pr-compare.yml
+++ b/.github/workflows/pr-compare.yml
@@ -18,4 +18,8 @@ jobs:
 
     - name: PipeRider Compare
       uses: InfuseAI/piperider-compare-action@v1
-
+      with:
+        cloud_api_token: ${{ secrets.PIPERIDER_CLOUD_TOKEN_ID }}
+        cloud_project: ${{ secrets.PIPERIDER_API_PROJECT }}
+        upload: true
+        share: true      
