--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -27,5 +27,5 @@ models:
   jaffle_shop:
       materialized: table
       staging:
-        +contract: false
+        # +contract: true
         materialized: view
