--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-git+https://github.com/dbt-labs/dbt-core.git@main#egg=dbt-core&subdirectory=core
-git+https://github.com/dbt-labs/dbt-core.git@main#egg=dbt-tests-adapter&subdirectory=tests/adapter
-git+https://github.com/dbt-labs/dbt-core.git@main#egg=dbt-postgres&subdirectory=plugins/postgres
-data-diff[postgresql]==0.4.1
+# git+https://github.com/dbt-labs/dbt-core.git@main#egg=dbt-core&subdirectory=core
+# git+https://github.com/dbt-labs/dbt-core.git@main#egg=dbt-tests-adapter&subdirectory=tests/adapter
+# git+https://github.com/dbt-labs/dbt-core.git@main#egg=dbt-postgres&subdirectory=plugins/postgres
+# data-diff[postgresql]==0.4.1
+dbt-core==1.5.0-rc2
+dbt-postgres==1.5.0-rc2
