--- a/profiles.yml
+++ b/profiles.yml
@@ -8,7 +8,7 @@ jaffle_shop:
       password: "{{ env_var('DB_PASS') }}"
       port: 5432
       dbname: sungwonchung3/constraints
-      schema: dbt_sung
+      schema: dbt_sung_a
       threads: 24
       connect_timeout: 10 # default 10 seconds
     prod:
