🔧 build: Configure the Jaffle shop for Sainsbury's

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,12 @@
+# IDE configs
+.idea/
+.vscode/
 
+# dbt artifacts
 target/
-dbt_modules/
+packages/
 logs/
-**/.DS_Store
+.user.yml
+
+# Files
+*.db
