--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -14,7 +14,7 @@ macro-paths: ["jaffle_shop/macros"]
 
 target-path: target
 packages-install-path: "jaffle_shop/packages"
-clean-targets: [target, packages, logs]
+clean-targets: [logs, target, "jaffle_shop/packages"]
 
 quoting:
   database: false
