--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 dbt-core==1.4.6  # Pinned for the SQLite adapter
 dbt-sqlite==1.4.0
-Jinja2>=3.*
+Jinja2==3.1.2
 pybadges==3.0.0
 pyyaml==6.0
 sqlglot==16.4.2
