🚚 refactor: Rename the dbt coverage SVG file

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,6 +13,7 @@ repos:
         name: Remove trailing whitespace
       - id: end-of-file-fixer
         name: Check that files end with a newline character
+        exclude_types: [svg]
       - id: check-added-large-files
         name: Check for large files
 
