Update SQL Project Metadata

--- a/pbt_project.yml
+++ b/pbt_project.yml
@@ -181,11 +181,11 @@ sqlSeeds:
   .prophecy/metadata/sqlseeds/raw_customers:
     name: raw_customers
     schema:
-      providerType: Databricks
+      providerType: Snowflake
       fields:
       - name: id
         dataType:
-          type: Integer
+          type: Number
       - name: first_name
         dataType:
           type: String
@@ -200,14 +200,14 @@ sqlSeeds:
   .prophecy/metadata/sqlseeds/raw_orders:
     name: raw_orders
     schema:
-      providerType: Databricks
+      providerType: Snowflake
       fields:
       - name: id
         dataType:
-          type: Integer
+          type: Number
       - name: user_id
         dataType:
-          type: Integer
+          type: Number
       - name: order_date
         dataType:
           type: Date
@@ -222,20 +222,20 @@ sqlSeeds:
   .prophecy/metadata/sqlseeds/raw_payments:
     name: raw_payments
     schema:
-      providerType: Databricks
+      providerType: Snowflake
       fields:
       - name: id
         dataType:
-          type: Integer
+          type: Number
       - name: order_id
         dataType:
-          type: Integer
+          type: Number
       - name: payment_method
         dataType:
           type: String
       - name: amount
         dataType:
-          type: Integer
+          type: Number
     description: null
     author: maciej@prophecy.io
     files:
@@ -252,14 +252,14 @@ sqlSources:
     tables:
     - name: raw_customers
       schema:
-        providerType: databricks
+        providerType: snowflake
         fields: []
       description: null
       author: maciej@prophecy.io
       createdAt: '2023-04-12 15:42:11'
     - name: raw_orders
       schema:
-        providerType: databricks
+        providerType: snowflake
         fields: []
       description: null
       author: maciej@prophecy.io
