[PoC] Change Data Source to use Databricks
Signed-off-by: Kent Huang <kent@infuseai.io>

--- a/profiles.yml
+++ b/profiles.yml
@@ -2,5 +2,8 @@ jaffle_shop:
   target: dev
   outputs:
     dev:
-      type: duckdb
-      path: jaffle_shop.duckdb
+      type: databricks
+      schema: default
+      host: dbc-2aec941b-f559.cloud.databricks.com
+      http_path: /sql/1.0/warehouses/6bb1bada6e82ee18
+      token: "{{ env_var('DATABRICKS_TOKEN') | as_text }}"
