--- a/prophecy-sources/sources.yml
+++ b/prophecy-sources/sources.yml
@@ -1,34 +1,3 @@
 ---
 version: 2
-sources:
-- name: "main.default"
-  database: "main"
-  schema: "default"
-  config:
-    enabled: true
-  tables:
-  - name: "raw_customers"
-    columns:
-    - name: "id"
-      dataType:
-        type: "Bigint"
-    - name: "first_name"
-      dataType:
-        type: "String"
-    - name: "last_name"
-      dataType:
-        type: "String"
-  - name: "raw_orders"
-    columns:
-    - name: "id"
-      dataType:
-        type: "Bigint"
-    - name: "user_id"
-      dataType:
-        type: "Bigint"
-    - name: "order_date"
-      dataType:
-        type: "Date"
-    - name: "status"
-      dataType:
-        type: "String"
+sources: []
