[Prophecy] Release version v1.1

--- a/pbt_project.yml
+++ b/pbt_project.yml
@@ -1,6 +1,6 @@
 name: jafjaf
 description: ''
-version: 0.0.1-SNAPSHOT
+version: v1.1
 author: kishore@simpledatalabs.com
 language: sql
 buildSystem: ''
