--- a/pbt_project.yml
+++ b/pbt_project.yml
@@ -8,7 +8,30 @@ buildSystemDetails: null
 pipelines: {}
 datasets: {}
 templates: {}
-jobs: {}
+jobs:
+  jobs/TestAirflow:
+    name: TestAirflow
+    description: Airflow Test Job
+    fabricUID: 2160
+    scheduler:
+      Composer: {}
+    cloudProvider: null
+    jobSize: null
+    scheduleCron: 0 0/1 * * *
+    timeout: null
+    alerting:
+      emails: ''
+      onStart: false
+      onSuccess: false
+      onFailure: false
+    pipelines: []
+    jobClusterMode:
+      clusterMode:
+        Single: {}
+      clusterId: null
+    enabled: null
+    createdAt: '2023-07-18 19:47:46'
+    author: nathan@prophecy.io
 functions:
   author: null
   createdAt: '2023-04-12 15:34:56'
@@ -45,6 +68,32 @@ sqlModels:
       models: []
       datasets: []
     createdAt: '2023-04-12 15:35:01'
+  .prophecy/metadata/sqlmodels/CustomerOrders:
+    name: CustomerOrders
+    schema:
+      providerType: Databricks
+      fields:
+      - name: customer_id
+        dataType:
+          type: Integer
+      - name: first_name
+        dataType:
+          type: String
+      - name: last_name
+        dataType:
+          type: String
+      - name: revenue
+        dataType:
+          type: Double
+    description: null
+    author: nathan@prophecy.io
+    files:
+    - models/CustomerOrders.sql
+    - .prophecy/ide/models/CustomerOrders.json
+    sqlDependencies:
+      models: []
+      datasets: []
+    createdAt: '2023-07-18 19:26:04'
   .prophecy/metadata/sqlmodels/orders:
     name: orders
     schema:
