--- a/pbt_project.yml
+++ b/pbt_project.yml
@@ -43,21 +43,7 @@ subgraphs: {}
 sqlModels:
   .prophecy/metadata/sqlmodels/stg_orders:
     name: stg_orders
-    schema:
-      providerType: Databricks
-      fields:
-      - name: order_id
-        dataType:
-          type: Integer
-      - name: customer_id
-        dataType:
-          type: Integer
-      - name: order_date
-        dataType:
-          type: Date
-      - name: status
-        dataType:
-          type: String
+    schema: null
     description: null
     author: maciej@prophecy.io
     files:
@@ -70,21 +56,7 @@ sqlModels:
     createdAt: '2023-04-12 15:35:01'
   .prophecy/metadata/sqlmodels/CustomerOrders:
     name: CustomerOrders
-    schema:
-      providerType: Databricks
-      fields:
-      - name: customer_id
-        dataType:
-          type: Integer
-      - name: first_name
-        dataType:
-          type: String
-      - name: last_name
-        dataType:
-          type: String
-      - name: revenue
-        dataType:
-          type: Double
+    schema: null
     description: null
     author: nathan@prophecy.io
     files:
@@ -96,36 +68,7 @@ sqlModels:
     createdAt: '2023-07-18 19:26:04'
   .prophecy/metadata/sqlmodels/orders:
     name: orders
-    schema:
-      providerType: Databricks
-      fields:
-      - name: order_id
-        dataType:
-          type: Integer
-      - name: customer_id
-        dataType:
-          type: Integer
-      - name: order_date
-        dataType:
-          type: Date
-      - name: status
-        dataType:
-          type: String
-      - name: credit_card_amount
-        dataType:
-          type: Double
-      - name: coupon_amount
-        dataType:
-          type: Double
-      - name: bank_transfer_amount
-        dataType:
-          type: Double
-      - name: gift_card_amount
-        dataType:
-          type: Double
-      - name: amount
-        dataType:
-          type: Double
+    schema: null
     description: This table has basic information about orders, as well as some derived
       facts based on payments
     author: maciej@prophecy.io
@@ -139,30 +82,7 @@ sqlModels:
     createdAt: '2023-04-12 15:35:01'
   .prophecy/metadata/sqlmodels/customers:
     name: customers
-    schema:
-      providerType: Databricks
-      fields:
-      - name: customer_id
-        dataType:
-          type: Integer
-      - name: first_name
-        dataType:
-          type: String
-      - name: last_name
-        dataType:
-          type: String
-      - name: first_order
-        dataType:
-          type: Date
-      - name: most_recent_order
-        dataType:
-          type: Date
-      - name: total_orders
-        dataType:
-          type: Bigint
-      - name: customer_lifetime_value
-        dataType:
-          type: Double
+    schema: null
     description: This table has basic information about a customer, as well as some
       derived facts based on a customer's orders
     author: maciej@prophecy.io
@@ -176,21 +96,7 @@ sqlModels:
     createdAt: '2023-04-12 15:35:01'
   .prophecy/metadata/sqlmodels/stg_payments:
     name: stg_payments
-    schema:
-      providerType: Databricks
-      fields:
-      - name: payment_id
-        dataType:
-          type: Integer
-      - name: order_id
-        dataType:
-          type: Integer
-      - name: payment_method
-        dataType:
-          type: String
-      - name: amount
-        dataType:
-          type: Double
+    schema: null
     description: null
     author: maciej@prophecy.io
     files:
@@ -203,18 +109,7 @@ sqlModels:
     createdAt: '2023-04-12 15:35:01'
   .prophecy/metadata/sqlmodels/stg_customers:
     name: stg_customers
-    schema:
-      providerType: Databricks
-      fields:
-      - name: customer_id
-        dataType:
-          type: Integer
-      - name: first_name
-        dataType:
-          type: String
-      - name: last_name
-        dataType:
-          type: String
+    schema: null
     description: null
     author: maciej@prophecy.io
     files:
@@ -230,7 +125,7 @@ sqlSeeds:
   .prophecy/metadata/sqlseeds/raw_customers:
     name: raw_customers
     schema:
-      providerType: Databricks
+      providerType: Trino
       fields:
       - name: id
         dataType:
@@ -249,7 +144,7 @@ sqlSeeds:
   .prophecy/metadata/sqlseeds/raw_orders:
     name: raw_orders
     schema:
-      providerType: Databricks
+      providerType: Trino
       fields:
       - name: id
         dataType:
@@ -271,7 +166,7 @@ sqlSeeds:
   .prophecy/metadata/sqlseeds/raw_payments:
     name: raw_payments
     schema:
-      providerType: Databricks
+      providerType: Trino
       fields:
       - name: id
         dataType:
