Fix repo for certification

--- a/jaffle_shop/models/staging/src_seed/_models.yml
+++ b/jaffle_shop/models/staging/src_seed/_models.yml
@@ -18,6 +18,12 @@ models:
         tests:
           - accepted_values:
               values: ['placed', 'shipped', 'completed', 'return_pending', 'returned']
+      - name: first_name_hash
+        tests:
+          - dbt_expectations.expect_column_to_exist
+      - name: last_name_hash
+        tests:
+          - dbt_expectations.expect_column_to_exist
 
   - name: stg_payments
     columns:
