--- a/jaffle_shop/models/warehouse/_models.yml
+++ b/jaffle_shop/models/warehouse/_models.yml
@@ -1,44 +1,45 @@
 version: 2
 
 models:
-  - name: customers
+  - name: wh_customers_pii
+    meta:
+      owner: 'adriana.kuzmanic@octoenergy.com'
+      team_owner: '!subteam^XXXXXX' #@selectedteam
+      sensitive: true
     description: This table has basic information about a customer, as well as some derived facts based on a customer's orders
-
     columns:
       - name: customer_id
-        description: This is a unique identifier for a customer
+        description: Primary key
         tests:
           - unique
           - not_null
-
-      - name: first_name
+      - name: first_name_hash
         description: Customer's first name. PII.
-
-      - name: last_name
+        meta:
+          sensitive: true
+      - name: last_name_hash
         description: Customer's last name. PII.
-
+        meta:
+          sensitive: true
       - name: first_order
         description: Date (UTC) of a customer's first order
-
       - name: most_recent_order
         description: Date (UTC) of a customer's most recent order
-
       - name: number_of_orders
         description: Count of the number of orders a customer has placed
-
-      - name: total_order_amount
+      - name: customer_lifetime_value
         description: Total value (AUD) of a customer's orders
-
-  - name: orders
+  - name: wh_orders
+    meta:
+      owner: 'adriana.kuzmanic@octoenergy.com'
+      team_owner: '!subteam^XXXXXX' #@selectedteam
     description: This table has basic information about orders, as well as some derived facts based on payments
-
     columns:
       - name: order_id
+        description: Primary key
         tests:
           - unique
           - not_null
-        description: This is a unique identifier for an order
-
       - name: customer_id
         description: Foreign key to the customers table
         tests:
@@ -46,36 +47,29 @@ models:
           - relationships:
               to: ref('customers')
               field: customer_id
-
       - name: order_date
         description: Date (UTC) that the order was placed
-
       - name: status
         description: '{{ doc("orders_status") }}'
         tests:
           - accepted_values:
               values: ['placed', 'shipped', 'completed', 'return_pending', 'returned']
-
       - name: amount
         description: Total amount (AUD) of the order
         tests:
           - not_null
-
       - name: credit_card_amount
         description: Amount of the order (AUD) paid for by credit card
         tests:
           - not_null
-
       - name: coupon_amount
         description: Amount of the order (AUD) paid for by coupon
         tests:
           - not_null
-
       - name: bank_transfer_amount
         description: Amount of the order (AUD) paid for by bank transfer
         tests:
           - not_null
-
       - name: gift_card_amount
         description: Amount of the order (AUD) paid for by gift card
         tests:
