--- a/models/staging/jaffle_shop/_jaffle_shop__models.yml
+++ b/models/staging/jaffle_shop/_jaffle_shop__models.yml
@@ -14,18 +14,7 @@ models:
         tests:
           - unique
           - not_null
-      - name: status
+      - name: order_status
         tests:
           - accepted_values:
               values: ['placed', 'shipped', 'completed', 'return_pending', 'returned']
-
-  - name: stg_jaffle_shop__payments
-    columns:
-      - name: payment_id
-        tests:
-          - unique
-          - not_null
-      - name: payment_method
-        tests:
-          - accepted_values:
-              values: ['credit_card', 'coupon', 'bank_transfer', 'gift_card']
